Fix some sonarqube recommendations